# TestDriver

./: .appveyor.yml  .gitignore  CMakeLists.txt  README.md  testDriver.c  testDriver.cpp  testKosorajo.c  testLab.h  testLab0.c  testLab0.cpp  testLab10.c  testLab11.c  testLab12.c  testLab2.c  testLab30.c  testLab4.c  testLab5.c  testLab5.cpp  testLab6.c  testLab7.c  testLab80.c  testLab9.c  testLab9.cpp  testlab-akinator.c  testlab-begin.c  testlab-gauss.c  testlab-queens.c  testlab-ray.c  testlab0.c  testlab1-0.c  testlab1-1.c  testlab1-2.c  testlab10.c  testlab11.c  testlab12.c  testlab2.c  testlab3-0.c  testlab3-3.c  testlab4.c  testlab5.c  (+13 more)
test/: kosarajo  lab-akinator  lab-begin  lab-gauss  lab-queens  lab-ray  lab0  lab1-0  lab1-2  lab10  lab11  lab12  lab2  lab3-0  lab3-3  lab4  lab5  lab6  lab6-0  lab6-1  lab6-2  lab6-3  lab7  lab8-0  lab8-1  lab80  lab9  lab9-1  lab9-1.c  labKosorajo  lab_churkin.c  testlab-begin
